<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".TaskPane" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/taskLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/deepblue"
            android:gravity="center_horizontal"
            android:text="@string/taskLabelEdit"
            android:textColor="@color/white" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:text="@string/from_time" />

            <Button
                android:id="@+id/buttonFromDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                style="@style/DarkThemeButton"
                android:text="Button" />

            <Button
                android:id="@+id/button_fromEdit"
                android:textColor="@color/lightgray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DarkThemeButton"
                android:text="Button" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:textColor="@color/lightgray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_time" />

            <Button
                android:id="@+id/buttonToDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                style="@style/DarkThemeButton"
                android:text="Button" />

            <Button
                android:id="@+id/button_toEdit"
                android:textColor="@color/lightgray"
                style="@style/DarkThemeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>
    
        <LinearLayout
            android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="2dp"
        android:orientation="vertical" 
        android:layout_below="@+id/tableLayout1"
        android:background="@drawable/rect">
    </LinearLayout>

    <TextView
        android:id="@+id/regulations3Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onTime"
        android:background="@color/deepblue"
        android:textColor="@color/lightgray"
        android:gravity="center_horizontal"
        android:layout_below="@+id/separator" />
    <LinearLayout
        android:id="@+id/afterEnableBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regulations3Label"
        android:orientation="vertical" >

        <Switch
            android:id="@+id/switch3Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:text="@string/enable" />


    </LinearLayout>

    <TextView
        android:id="@+id/regulations4Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/afterEnableBlock"
        android:text="@string/SetWeek"
        android:background="@color/deepblue"
        android:textColor="@color/lightgray"
        android:gravity="center_horizontal"/>


    <RelativeLayout
        android:id="@+id/weekDaysLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/duringBlock"
        android:layout_below="@+id/afterEnableBlock">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxMondayEdit"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="17dp"
            android:text="@string/checkBoxMonday"
            android:textColor="@color/deepblue" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxTuesdayEdit"
            android:text="@string/checkBoxTuesday"
            android:textColor="@color/deepblue"
            android:layout_alignTop="@+id/checkBoxMondayEdit"
            android:layout_toRightOf="@+id/checkBoxMondayEdit" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxWednesday"
            android:id="@+id/checkBoxWednesdayEdit"
            android:textColor="@color/deepblue"
            android:layout_alignTop="@+id/checkBoxTuesdayEdit"
            android:layout_toRightOf="@+id/checkBoxTuesdayEdit" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxThursday"
            android:id="@+id/checkBoxThursdayEdit"
            android:textColor="@color/deepblue"
            android:layout_alignTop="@+id/checkBoxWednesdayEdit"
            android:layout_toRightOf="@+id/checkBoxWednesdayEdit" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxFriday"
            android:id="@+id/checkBoxFridayEdit"
            android:textColor="@color/deepblue"
            android:layout_below="@+id/checkBoxMondayEdit"
            android:layout_alignParentLeft="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxSaturday"
            android:id="@+id/checkBoxSaturdayEdit"
            android:textColor="@color/deepblue"
            android:layout_below="@+id/checkBoxTuesdayEdit"
            android:layout_alignLeft="@+id/checkBoxTuesdayEdit" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxSunday"
            android:id="@+id/checkBoxSundayEdit"
            android:textColor="@color/deepblue"
            android:layout_alignTop="@+id/checkBoxSaturdayEdit"
            android:layout_toRightOf="@+id/checkBoxSaturdayEdit" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLabelMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weekDaysLayout"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/modeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/deepblue"
            android:gravity="center_horizontal"
            android:text="@string/SetMode"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMode"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_below="@+id/linearLayoutLabelMode"
        android:layout_height="wrap_content">


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxVibrate"
            android:textColor="@color/deepblue"
            android:id="@+id/checkBoxVibrate" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxNoSound"
            android:textColor="@color/deepblue"
            android:id="@+id/checkBoxNoSound" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSetBlock"
        android:layout_below="@+id/layoutMode"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/buttonSetTaskEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            style="@style/DarkThemeButton"
            android:text="@string/setTask" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            style="@style/DarkThemeButton"
            android:text="@string/delete" />

    </LinearLayout>

</RelativeLayout>