<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".TaskPane" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/taskLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taskLabel"
            android:background="@color/deepblue"
            android:textColor="@color/black"
            android:gravity="center_horizontal"/>


    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="4dp">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:paddingRight="4dp"
                android:text="@string/from_time" />

            <Button
                android:id="@+id/buttonFromDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button"
                android:textColor="@color/lightgray"
                style="@style/DarkThemeButton" />

            <Button
                android:id="@+id/button_from"
                style="@style/DarkThemeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:text="Button" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:text="@string/to_time" />

            <Button
                android:id="@+id/buttonToDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button"
                android:textColor="@color/lightgray"
                style="@style/DarkThemeButton" />

            <Button
                android:id="@+id/button_to"
                style="@style/DarkThemeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:text="Button" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>
    
        <LinearLayout
            android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="2dp"
        android:orientation="vertical" 
        android:layout_below="@+id/tableLayout1"
        android:background="@drawable/rect">
    </LinearLayout>

    <LinearLayout
                    android:id="@+id/duringBlock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
         android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:orientation="vertical"
         android:layout_below="@+id/separator">

    </LinearLayout>

    <LinearLayout
                    android:id="@+id/afterDuringBlock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/duringBlock">

        </LinearLayout>

    <TextView
        android:id="@+id/regulations3Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/afterDuringBlock"
        android:text="@string/onTime"
        android:background="@color/deepblue"
        android:textColor="@color/lightgray"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/afterEnableBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regulations3Label"
        android:orientation="vertical" >

        <Switch
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/deepblue"
            android:paddingTop="4dp"
            android:text="@string/enable" />

    </LinearLayout>

    <TextView
        android:id="@+id/regulations4Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/afterEnableBlock"
        android:text="@string/SetWeek"
        android:background="@color/deepblue"
        android:textColor="@color/lightgray"
        android:gravity="center_horizontal"/>

     	<LinearLayout
     	    android:layout_width="match_parent"
     	    android:layout_height="wrap_content"
     	    android:layout_below="@+id/layoutMode"
     	    android:layout_marginTop="10dp" 
     	    android:gravity="center_horizontal"
            android:id="@+id/linearLayout">

     		<Button
     		    android:id="@+id/buttonSetTask"
     		    android:layout_width="wrap_content"
     		    android:layout_height="wrap_content"
     		    android:text="@string/setTask"
                android:textColor="@color/lightgray"
                style="@style/DarkThemeButton2" />

     	</LinearLayout>

    <RelativeLayout
        android:id="@+id/weekDaysLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/duringBlock"
        android:layout_below="@+id/regulations4Label">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxMonday"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="17dp"
            android:text="@string/checkBoxMonday"
            android:textColor="@color/deepblue" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxTuesday"
            android:text="@string/checkBoxTuesday"
            android:textColor="@color/deepblue"
            android:layout_alignTop="@+id/checkBoxMonday"
            android:layout_toRightOf="@+id/checkBoxMonday" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxWednesday"
            android:id="@+id/checkBoxWednesday"
            android:textColor="@color/deepblue"
            android:layout_alignTop="@+id/checkBoxTuesday"
            android:layout_toRightOf="@+id/checkBoxTuesday" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxThursday"
            android:id="@+id/checkBoxThursday"
            android:textColor="@color/deepblue"
            android:layout_alignTop="@+id/checkBoxWednesday"
            android:layout_toRightOf="@+id/checkBoxWednesday" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxFriday"
            android:id="@+id/checkBoxFriday"
            android:textColor="@color/deepblue"
            android:layout_below="@+id/checkBoxMonday"
            android:layout_alignParentLeft="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxSaturday"
            android:id="@+id/checkBoxSaturday"
            android:textColor="@color/deepblue"
            android:layout_below="@+id/checkBoxTuesday"
            android:layout_alignLeft="@+id/checkBoxTuesday" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxSunday"
            android:id="@+id/checkBoxSunday"
            android:textColor="@color/deepblue"
            android:layout_alignTop="@+id/checkBoxSaturday"
            android:layout_toRightOf="@+id/checkBoxSaturday" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLabelMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weekDaysLayout"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/modeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/deepblue"
            android:gravity="center_horizontal"
            android:text="@string/SetMode"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMode"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_below="@+id/linearLayoutLabelMode"
        android:layout_height="wrap_content">


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxVibrate"
            android:textColor="@color/deepblue"
            android:id="@+id/checkBoxVibrateEdit" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxNoSound"
            android:textColor="@color/deepblue"
            android:id="@+id/checkBoxNoSoundEdit" />

    </LinearLayout>

</RelativeLayout>